--- a/style.css
+++ b/style.css
@@ -15,6 +15,24 @@ a{
     border-radius: 3rem;
 }
 
+
+.lato-bold {
+  font-family: "Big Shoulders", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+.lex-deca{
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  
+  letter-spacing: 1px;
+}
+
+
+/*  */
 .card__sedan{
     background-color: #E38525;
     padding: 1rem 3rem;
